@@ -1,0 +1,5 @@
+from venusian.tests.fixtures import decorator
+
+@decorator()
+class Class(object):
+    pass
