@@ -1,0 +1,1 @@
+from .mod1 import Class
